# nx-mimosa

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  BENCHMARK_RESULTS.md  BENCHMARK_RESULTS_v59.md  BENCHMARK_v59.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  LICENSE_COMMERCIAL.md  MANIFEST.in  README.md  benchmark.py  ext_bench.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml
benchmarks/: BENCHMARK_REPORT_v31_FINAL.md  BENCHMARK_RESULTS.md  MULTI_DOMAIN_RESULTS.md  benchmark_results.json  benchmark_v32_upgrade.py  benchmark_v32c_adaptive_omega.py  benchmark_v33_dual_mode.py  benchmark_v40_sentinel.py  benchmark_vs_goldstandard.py  benchmark_vs_stonesoup.py  competitive_benchmark.py  fair_benchmark.py  multi_domain_benchmark.py  multi_domain_results.json  open_benchmark.py  real_data_adsb.py
benchmarks/results/: adsb_cache.json
config/: nx_mimosa_v33_regmap.yaml  system_config.yaml
cpp/: CMakeLists.txt  setup.py
cpp/include/: nx_core.hpp  nx_core_v620.hpp  nx_eccm.hpp
cpp/src/: bindings.cpp  bindings_v620.cpp
cpp/tests/: bench.cpp  test_cpp_core.py
data/: platform_db.json  platform_db_v2_multidomain.json  platform_db_v3.json
docs/: BENCHMARK_REPORT.md  BENCHMARK_REPORT_v401.md  BENCHMARK_V59.md  BENCHMARK_v591_500plus.md  BENCHMARK_v600_cpp_core.md  BENCHMARK_v610_FULL.json  BENCHMARK_v610_FULL.md  BOM.csv  BOM_SEEKER_BOARD_V31.md  COMMERCIAL_READINESS_AUDIT.md  COMPARISON.md  COMPETITIVE_ANALYSIS_v591.md  COMPETITIVE_ANALYSIS_v610.md  DO178C_CERTIFICATION_PACKAGE.md  DO254_CERT_PACKAGE.md  DO254_FPGA_CERTIFICATION.md  EW_COUNTERMEASURES_REPORT.md  FEATURE_ANALYSIS.md  FEATURE_MATRIX.md  IMPROVEMENT_PLAN_V2.md  INTEGRATION_GUIDE.md  ISO26262_ASIL_D_CERTIFICATION.md  Makefile  NX-MIMOSA_v593_Sales_Deck.pptx  PATENT_DRAFT_MIMO_IMM_SMOOTHER.md  RELEASE_PLAN_V1.1.md  RELEASE_v620.md  RESOURCE_ESTIMATE.md  SIMULATION_v601_1000_2000.md  V1.1_RELEASE_PLAN.md  conf.py  index.rst  requirements.txt
docs/_static/: custom.css
docs/patent/: PATENT_CLAIMS_COGNITIVE_ECCM.md  PATENT_MOCES_HYBRID_7D.md
docs/source/: conf.py  index.rst  installation.rst  license.rst  quickstart.rst
docs/whitepaper/: COGNITIVE_EW_WHITEPAPER_v1.0.md
examples/: 01_quickstart.ipynb  02_multi_sensor_fusion.ipynb  03_intelligence.ipynb  03_platform_id_ecm_intent.ipynb  iskander_kinzhal_simulation.py  simple_radar_demo.py
fpga/: build_rfsoc.tcl  build_v33.tcl
fpga/comm/: comm_controller_top.sv  failover_fsm.sv  link16_asterix_adapter.sv  link_monitor.sv
fpga/correlator/: coherent_integrator.sv  parallel_correlator_engine.sv  prbs20_segmented_correlator.sv  qedmma_correlator_bank_v32.sv
fpga/eccm/: eccm_controller.sv  jammer_localizer.sv  ml_cfar_engine.sv  ml_cfar_hoj_controller.sv
fpga/frontend/: digital_agc.sv  polyphase_decimator.sv
fpga/fusion/: asterix_parser.sv  external_track_adapter.sv  link16_interface.sv  track_database.sv  track_fusion_engine.sv
fpga/sync/: dmtd_phase_detector.sv  toa_capture_unit.sv  white_rabbit_ptp_core.sv
nx_mimosa/: __init__.py  accel.py  demo.py  nx_mimosa_batch.py  nx_mimosa_coords.py  nx_mimosa_datasets.py  nx_mimosa_intelligence.py  nx_mimosa_mtt.py  nx_mimosa_v33_driver.py  nx_mimosa_v40_sentinel.py
nx_mimosa/data/: platform_db_v2.json
python/: __init__.py  atc_compliance_validation.py  ecm_benchmark.py  mimo_smoother_feedback_sim.py  nx_mimosa_coords.py  nx_mimosa_eccm.py  nx_mimosa_fusion.py  nx_mimosa_intent_classifier.py  nx_mimosa_mtt.py  nx_mimosa_v2_reference.py  nx_mimosa_v33_dual_mode.py  nx_mimosa_v33_ew_resilience.py  nx_mimosa_v40_sentinel.py  nx_mimosa_v41_atc.py  nx_mimosa_v41_calibrated.py  nx_mimosa_v4_unified.py  sim_integrated_8d_fusion_output.py  v31_hypersonic_validation.py
python/accel/: gpu_acceleration.py
python/advanced/: jpda_filter.py  mht_filter.py
python/cognitive/: __init__.py  cognitive_cfar.py  svm_exporter.py
python/eccm/: fpga_frequency_agility.py
python/ew/: __init__.py  adversarial_ppo.py  gan_adversarial.py  jammer_classifier.py  ppo_7d_cognitive.py  ppo_agent.py  sim_hybrid_6d7d.py  vitis_ai_deploy.py
python/filters/: __init__.py  ekf_nonlinear.py  particle_filter.py
python/fusion/: __init__.py  track_to_track_fusion.py
python/interfaces/: ros2_interface.py
python/output/: asterix_cat062_encoder.py  asterix_cat062_formatter.py  canfd_adas_encoder.py  canfd_automotive_formatter.py  ccsds_space_formatter.py  link16_defense_formatter.py  (+1 more)
reports/: v4.2.6_performance_sprint.md
rtl/: README.md  adaptive_mimo_beamformer.sv  adaptive_q_module.sv  adsb_radar_fusion.sv  cognitive_cfar.sv  dynamic_tpm_module.sv  escalation_8d_beam.sv  files.f  fixed_lag_smoother.sv  frequency_agility_controller.sv  hybrid_eccm_6d7d.sv  imm_core.sv  imm_fixed_lag_smoother.sv  kalman_filter_core.sv  maneuver_detector.sv  matrix_inverse_4x4.sv  matrix_multiply_4x4.sv  matrix_vector_mult.sv  multi_domain_output.sv  nx_mimosa_axi_wrapper.sv  nx_mimosa_pkg.sv  nx_mimosa_pkg_v2.sv  nx_mimosa_pkg_v33.sv  nx_mimosa_top.sv  nx_mimosa_v31_top.sv  nx_mimosa_v33_top.sv  nx_mimosa_v40_feature_ext.sv  nx_mimosa_v40_hybrid_sel.sv  nx_mimosa_v40_imm.sv  nx_mimosa_v40_pkg.sv  nx_mimosa_v40_rts_lag.sv  nx_mimosa_v40_top.sv  nx_mimosa_v41_feature_ext.sv  q_table_agility.sv  qedmma_pkg.sv  qedmma_v31_top.sv  sincos_lut.sv  top_cognitive_eccm_7d.sv  ukf_core.sv  vgpo_continuity_filter.sv  (+1 more)
scripts/: benchmark_v610.py  benchmark_v610_eccm.py  build_qedmma_v31.tcl  build_rfsoc4x2.tcl  build_zcu208.tcl  build_zu48dr.tcl  competitive_analysis.py  gen_demo_gif.py  gen_platform_db.py  sim_1000_2000.py
tests/: benchmark_v620_eccm.py  test_500plus_benchmark.py  test_batch.py  test_eccm_v610.py  test_ecm_benchmark.py  test_gaps_v55.py  test_integration.py  test_intelligence.py  test_intelligence_fusion.py  test_nx_mimosa.py  test_nx_mimosa_fusion.py  test_nx_mimosa_intent_classifier.py  test_nx_mimosa_v50.py  test_phd_v592.py  test_real_adsb.py  test_real_data_adsb.py  test_v59_benchmark.py  test_validation_v57.py
tests/cocotb/: Makefile  (+1 more)
verif/: Makefile  __init__.py  test_nx_mimosa_v33.py
(+47 files in other folders)
