# ═══════════════════════════════════════════════════════════════════════════════
# NX-MIMOSA - PROJECT CONFIGURATION
# PEP 517/518 compliant build configuration
# ═══════════════════════════════════════════════════════════════════════════════

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nx-mimosa"
version = "1.0.0"
description = "Production Multi-Domain Radar Tracking System"
readme = "README.md"
license = {text = "AGPL-3.0-or-later"}
requires-python = ">=3.8"
authors = [
    {name = "Dr. Mladen Mešter", email = "mladen@nexellum.com"}
]
maintainers = [
    {name = "Nexellum d.o.o.", email = "info@nexellum.com"}
]
keywords = [
    "radar", "tracking", "kalman-filter", "ukf", "imm",
    "multi-target-tracking", "jpda", "mht", "asterix",
    "aerospace", "defense", "adas", "fpga", "rfsoc"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
]

dependencies = [
    "numpy>=1.21.0,<2.0.0",
    "scipy>=1.7.0",
    "typing-extensions>=4.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-xdist>=3.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]
docs = [
    "sphinx>=6.0.0",
    "sphinx-rtd-theme>=1.2.0",
    "sphinx-autodoc-typehints>=1.22.0",
]
fpga = [
    "cocotb>=1.8.0",
    "cocotb-test>=0.2.0",
]
viz = [
    "matplotlib>=3.5.0",
    "pandas>=1.3.0",
]
all = [
    "nx-mimosa[dev,docs,fpga,viz]",
]

[project.urls]
Homepage = "https://github.com/mladen1312/nx-mimosa"
Documentation = "https://nx-mimosa.readthedocs.io/"
Repository = "https://github.com/mladen1312/nx-mimosa.git"
Changelog = "https://github.com/mladen1312/nx-mimosa/blob/main/CHANGELOG.md"
"Bug Tracker" = "https://github.com/mladen1312/nx-mimosa/issues"

[project.scripts]
nx-mimosa = "python.cli:main"

# ═══════════════════════════════════════════════════════════════════════════════
# TOOL CONFIGURATIONS
# ═══════════════════════════════════════════════════════════════════════════════

[tool.setuptools.packages.find]
where = ["."]
include = ["python*"]

[tool.setuptools.package-data]
"*" = ["*.yaml", "*.json", "*.sv", "*.tcl"]

# ─────────────────────────────────────────────────────────────────────────────
# BLACK (Code Formatter)
# ─────────────────────────────────────────────────────────────────────────────
[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311', 'py312']
include = '\.pyi?$'
exclude = '''
/(
    \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
)/
'''

# ─────────────────────────────────────────────────────────────────────────────
# ISORT (Import Sorter)
# ─────────────────────────────────────────────────────────────────────────────
[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
skip_gitignore = true
known_first_party = ["nx_mimosa", "python"]

# ─────────────────────────────────────────────────────────────────────────────
# PYTEST
# ─────────────────────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "fpga: marks tests requiring FPGA simulation",
    "integration: marks integration tests",
]
filterwarnings = [
    "ignore::DeprecationWarning",
]

# ─────────────────────────────────────────────────────────────────────────────
# COVERAGE
# ─────────────────────────────────────────────────────────────────────────────
[tool.coverage.run]
source = ["python"]
branch = true
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/site-packages/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
fail_under = 80
show_missing = true

[tool.coverage.html]
directory = "htmlcov"

# ─────────────────────────────────────────────────────────────────────────────
# MYPY (Type Checking)
# ─────────────────────────────────────────────────────────────────────────────
[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
strict_optional = true
disallow_untyped_defs = false
check_untyped_defs = true
show_error_codes = true
pretty = true

[[tool.mypy.overrides]]
module = ["numpy.*", "scipy.*", "matplotlib.*", "pandas.*"]
ignore_missing_imports = true

# ─────────────────────────────────────────────────────────────────────────────
# PYLINT
# ─────────────────────────────────────────────────────────────────────────────
[tool.pylint.main]
ignore = ["tests", "__pycache__"]
jobs = 0
max-line-length = 100

[tool.pylint."messages control"]
disable = [
    "C0114",  # missing-module-docstring
    "C0115",  # missing-class-docstring
    "C0116",  # missing-function-docstring
    "R0903",  # too-few-public-methods
    "R0913",  # too-many-arguments
    "R0914",  # too-many-locals
]

[tool.pylint.format]
max-line-length = 100

# ─────────────────────────────────────────────────────────────────────────────
# RUFF (Fast Linter)
# ─────────────────────────────────────────────────────────────────────────────
[tool.ruff]
line-length = 100
target-version = "py38"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "D", "UP", "YTT", "ANN", "S", "BLE", "B", "A", "C4", "T10", "ISC", "ICN", "T20", "PT", "Q", "RET", "SLF", "SIM", "TID", "ARG", "ERA", "PL", "TRY", "RUF"]
ignore = ["D100", "D101", "D102", "D103", "D104", "D105", "D107", "ANN101", "ANN102"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101", "ANN", "D"]
