[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nx-mimosa"
version = "6.0.1"
description = "Radar multi-target tracker — 5,000 targets in 40 ms, ECM detection, military ID, NATO output. C++ core + Python intelligence."
readme = "README.md"
license = {text = "AGPL-3.0-or-later"}
requires-python = ">=3.9"
authors = [
    {name = "Mladen Mešter", email = "mladen@nexellum.com"},
]
keywords = [
    "radar", "tracking", "kalman-filter", "imm", "ekf", "ukf",
    "multi-target", "multi-sensor", "data-association",
    "jpda", "mht", "gnn", "phd", "cphd", "lmb",
    "platform-identification", "ecm", "electronic-warfare",
    "signal-processing", "defense", "aerospace",
    "satellite-tracking", "air-traffic-control", "sensor-fusion",
    "gospa", "ospa", "nees", "siap",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Typing :: Typed",
]
dependencies = [
    "numpy>=1.21",
    "scipy>=1.7",
]

[project.optional-dependencies]
full = [
    "scipy>=1.7",
    "matplotlib>=3.5",
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "sphinx>=7.0",
    "sphinx-rtd-theme>=2.0",
    "sphinx-autodoc-typehints>=1.25",
    "mypy>=1.0",
    "ruff>=0.1",
]
benchmark = [
    "stonesoup",
    "filterpy",
    "pykalman",
    "matplotlib",
]
datasets = [
    "nuscenes-devkit",
    "pyarrow",
]

[project.urls]
Homepage = "https://nexellum.com"
Documentation = "https://nx-mimosa.readthedocs.io"
Repository = "https://github.com/mladen1312/nx-mimosa"
Issues = "https://github.com/mladen1312/nx-mimosa/issues"
Changelog = "https://github.com/mladen1312/nx-mimosa/blob/main/CHANGELOG.md"

[tool.setuptools.packages.find]
where = ["."]
include = ["nx_mimosa*"]

[tool.setuptools.package-data]
"nx_mimosa" = ["py.typed", "*.json", "*.yaml", "data/*.json", "config/*.yaml"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "--tb=short -q"

[tool.ruff]
line-length = 120
target-version = "py39"

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
